Re-enabled testEcho in TestExecuteProcess and TestExecuteStreamCommand to run on Windows.